Tech Stack commit

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 /.vs/Portfolio-Showcase/config/applicationhost.config
 /.vs/Portfolio-Showcase/FileContentIndex/read.lock
 /.vs/Portfolio-Showcase/v17/.wsuo
+/.vs/awesome-portfolio-websites/FileContentIndex/65006575-dc21-4ed6-8a04-c6f0c65e7317.vsidx
+/.vs/awesome-portfolio-websites/FileContentIndex/4d894b89-e243-4ad9-b8e5-4e6e85e99f4f.vsidx
+/.vs/awesome-portfolio-websites/FileContentIndex/2b23b811-b35a-4a51-b542-0474ac94d7a7.vsidx
+/.vs/awesome-portfolio-websites/v17/.wsuo
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
